fix: lottie logo color in dark mode

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -364,3 +364,7 @@ textarea.input {
   border-right-color: currentColor;
   @apply animate-spin;
 }
+
+.xlog-lottie-logo path[fill="rgb(0,0,0)"] {
+  @apply fill-current;
+}
